--- a/src/Components/User/Contact/Contact.scss
+++ b/src/Components/User/Contact/Contact.scss
@@ -2,6 +2,8 @@ section#contact{
     main {
         display: grid;
     grid-template-columns: 1fr 1fr;
+    width: 100%;
+
     @media screen and (max-width : $mobile-breakpoint) {
         grid-template-columns: 1fr;
     }
@@ -13,6 +15,7 @@ section#contact{
         grid-template-columns: 1fr 1fr;
         width: 100%;
         div{
+            width: 100%;
             display: flex;
             flex-direction: column;
             
@@ -25,6 +28,7 @@ section#contact{
             border-radius: 5px;
             background: transparent;
             border: 1px solid $lightest-slate;
+            width: 100%;
             padding: 10px 20px;
             transition: $transition;
             &:focus{
